# repo

./: .gitignore
AcademicRepositories/branches/CvConvNet/ConvNet/: CMakeLists.txt  compile.sh
AcademicRepositories/branches/CvConvNet/ConvNet/data/: README  sample.xml
AcademicRepositories/branches/CvConvNet/ConvNet/doc/: Mainpage.dox  cvconvnet.dox
AcademicRepositories/branches/CvConvNet/ConvNet/include/: cvconvnetparser.h
AcademicRepositories/branches/CvConvNet/ConvNet/lib/: CONVNETd.exp  CONVNETd.ilk
AcademicRepositories/branches/CvConvNet/ConvNet/src/: cvconvnet.cpp  cvconvnetparser.cpp
Completer/: Completer.pro  fsmodel.cpp  fsmodel.h  main.cpp  mainwindow.cpp  mainwindow.h
CornerDetection/: CornerDetection.pro  contouranalysis.h  harriscornerdetector.cpp  harriscornerdetector.h  main.cpp  measureinterestpointdetectors.cpp  measureinterestpointdetectors.h  myharris.cpp  myharris.h  repeatabilityResults.xml  repeatabilityResults.yaml  repeatabilityResults.yml  visionmanager.cpp  visionmanager.h
FuriousMinions/: FuriousMinions.pro  affiniteetemplate.cpp  affiniteetemplate.h  common.cpp  common.h  furiouspushbutton.cpp  furiouspushbutton.h  globalvariables.cpp  globalvariables.h  local.properties  mainwindow.cpp  mainwindow.h  mainwindow.ui  minion.cpp  minion.h  miniondata.cpp  minionhub.cpp  minionhub.h  minionselectionwidget.cpp  minionselectionwidget.h  miniontemplate.cpp  miniontemplate.h  names.txt  quest.cpp  quest.h  questhub.cpp  questhub.h  questprogresshub.cpp  questprogresshub.h  questprogresswidget.cpp  questprogresswidget.h  questselectionwidget.cpp  questselectionwidget.h  questtimer.cpp  questtimer.h  questwidget.cpp  questwidget.h  res.qrc  reward.cpp  reward.h  (+3 more)
MovingLine/: MovingLine.pro  clickablecircle.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingline.cpp  movingline.h
MyFaceDetector/: Forest.txt
RDFTest/: RDFTest.pro  browsesettingsdialog.cpp  browsesettingsdialog.h  browsesettingsdialog.ui  classlistwidget.cpp  classlistwidget.h  classobject.cpp  classobject.h  common.cpp  common.h  control.cpp  control.h  featureextractor.cpp  featureextractor.h  filesystembrowser.cpp  filesystembrowser.h  filesystembrowser.ui  imagecontainer.cpp  imagecontainer.h  imagecontainerlist.cpp  imagecontainerlist.h  imagelistwidget.cpp  imagelistwidget.h  imageobject.cpp  imageobject.h  imagewindow.cpp  imagewindow.h  instanceextractor.cpp  (+19 more)
(+869 files in other folders)
